fix: Deploy to GitHub pages

--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -1,4 +1,4 @@
-name: Build and test
+name: Build and publish
 
 on:
   - push
@@ -30,7 +30,15 @@ jobs:
     - shell: bash
       run: mkdir build && cp output.html build/index.html
 
-    - name: Deploy 🚀
-      uses: JamesIves/github-pages-deploy-action@v4
+    - name: Setup Pages
+      uses: actions/configure-pages@v2
+
+    - name: Upload artifact
+      uses: actions/upload-pages-artifact@v1
       with:
-        folder: build # The folder the action should deploy.
+        # Upload entire repository
+        path: 'build'
+
+    - name: Deploy to GitHub Pages
+      id: deployment
+      uses: actions/deploy-pages@v1
