--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -6,10 +6,16 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    
+
     permissions:
       pages: write      # to deploy to Pages
+      deployments: write
       id-token: write   # to verify the deployment originates from an appropriate source
+      
+    # Deploy to the github-pages environment
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
 
     steps:
     - name: Checkout repository
